# Raven

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  CONFIGURATION_MIGRATION.md  Cargo.toml  Makefile  README.md  build.rs  prod.toml  pyproject.toml  requirements.txt  start_services.sh  stop_services.sh  test.toml
.github/workflows/: release.yml
benches/: grpc_streaming_benchmarks.rs  high_frequency_benchmarks.rs  influxdb_v2_benchmarks.rs  latency_benchmarks.rs  memory_usage_benchmarks.rs
config/: README.md  default.toml  development.toml  example.toml  production.toml  staging.toml
dashboard/: README.md  app.py  requirements.txt
dashboard/pages/: analysis.py  crypto.py  macro.py
dashboard/static/css/: styles.css
dashboard/static/html/: error_message.html  info_message.html  metric_card.html  metric_card_colored.html  page_header.html  section_header.html
dashboard/utils/: influx_client.py
dashboard/utils/home/: charting.py  data_ops.py  templates.py
docker/: .env.production  Dockerfile  Dockerfile.dashboard  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  healthcheck.sh  prometheus.yml
docker/grafana/dashboards/: raven-overview.json
docs/: CODEBASE_EVALUATION.md  enhanced_error_handling.md  final_system_testing_guide.md  monitoring.md  performance_optimization_guide.md
proto/: AGENT.md  control.proto  market_data.proto  subscription.proto
python_client/: README.md  client.py  generate_proto.py  test.py
script/: deploy-raven.sh
scripts/: run-env.sh  run_final_system_tests.sh  run_performance_benchmarks.sh  test_failover_scenarios.sh  validate_benchmarks.sh  validate_system_performance.sh
sql/: AGENT.md  create_bars_table.sql  create_table_bar__tick_imbalance.sql  create_table_bar__time.sql  timescale_schema.sql
src/: AGENT.md  config.rs  dead_letter_queue.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs  snapshot_service.rs  telemetry.rs  types.rs
src/app/: cli.rs  mod.rs  shutdown.rs  startup.rs
src/circuit_breaker/: mod.rs  tests.rs
src/citadel/: mod.rs  tests.rs
src/citadel/app/: mod.rs
src/citadel/storage/: atomic.rs  mod.rs  snapshots.rs  tests.rs
src/citadel/streaming/: metrics.rs  mod.rs  tests.rs
src/client_manager/: mod.rs  tests.rs
src/clients/: README.md
src/clients/bars/: mod.rs  router.rs  tib.rs
src/common/: logging.rs  mod.rs  time.rs
src/common/config/: builder.rs  loader.rs  manager.rs  mod.rs  runtime_config.rs  utils.rs  validation.rs
src/common/db/: circuit_breaker.rs  dead_letter_queue.rs  mod.rs  retry_handlers.rs
src/common/error/: classification.rs  context.rs  conversions.rs  handler.rs  macros.rs  metrics.rs  mod.rs  recovery.rs  traits.rs
src/config/: builder.rs  config_impl.rs  integration_tests.rs  loader.rs  manager.rs  mod.rs  tests.rs  utils.rs  validation.rs
src/config/sections/: batching.rs  data_processing.rs  database.rs  mod.rs  monitoring.rs  retention.rs  server.rs
src/control/: grpc_service.rs  manager.rs  mod.rs
src/controller/: mod.rs
src/data_engine/: config.rs  engine.rs  mod.rs  validation.rs
src/data_engine/app/: mod.rs
src/data_engine/storage/: snapshots.rs
src/data_engine/streaming/: batch.rs  mod.rs  service.rs
src/data_handlers/: handler.rs  mod.rs
src/data_handlers/high_frequency/: handler.rs  mod.rs  performance_stats.rs  tests.rs
src/data_handlers/low_frequency/: config.rs  handler.rs  metrics.rs  mod.rs  storage.rs  tests.rs  types.rs
src/data_handlers/private_data/: config.rs  handler.rs  metrics.rs  mod.rs  storage.rs  tests.rs  types.rs
src/database/: circuit_breaker.rs  dead_letter_queue.rs  influx_client.rs  mod.rs  retry_handlers.rs  tests.rs
src/database/influx_client/: datapoints.rs  dead_letter.rs  mod.rs
src/db/: AGENT.md  influx.rs  mod.rs  timescale.rs
src/db/influx/: mod.rs  persistence.rs  worker.rs
src/db/timescale/: bars.rs  dim_cache.rs  init.rs  kline.rs  mod.rs  schema.rs  symbol_pair.rs
src/dead_letter_queue/: mod.rs  tests.rs
src/domain/: AGENT.md  asset.rs  instrument.rs  mod.rs  venue.rs
src/error/: classification.rs  context.rs  conversions.rs  handler.rs  macros.rs  metrics.rs  mod.rs  recovery.rs  tests.rs  traits.rs  types.rs
src/exchange/: binance_futures.rs  binance_spot.rs  mod.rs
src/exchanges/: mod.rs  types.rs  websocket.rs
src/exchanges/binance/: mod.rs  tests.rs
src/features/: AGENT.md  bars.rs  mod.rs  tibs.rs  timebar.rs  timebar_minutes.rs  trbs.rs  vibs.rs  vpin.rs
src/features/docs/: tibs_en.md  tibs_ko.md  trbs_en.md  trbs_ko.md  vibs_en.md  vibs_ko.md  vpin_en.md  vpin_ko.md
src/monitoring/: health.rs  metrics.rs  mod.rs  tests.rs  tracing.rs
src/pipeline/: AGENT.md  mod.rs  render.rs  spec.rs
src/routing/: AGENT.md  mod.rs  symbol_resolver.rs  venue_selector.rs
src/server/: connection.rs  grpc_service.rs  mod.rs  tests.rs
src/server/app/: args.rs  mod.rs  server.rs  shutdown.rs  startup.rs
src/server/client_manager/: mod.rs
src/server/controller_service/: grpc_service.rs  manager.rs
src/server/data_engine/: config.rs  engine.rs  metrics.rs  mod.rs  validation.rs
src/service/: AGENT.md  mod.rs  spec.rs  stream_key.rs  stream_manager.rs
src/snapshot_service/: config.rs  mod.rs  tests.rs
src/source/: AGENT.md  mod.rs  ws_sharding.rs
src/subscription_manager/: mod.rs  tests.rs
src/telemetry/: AGENT.md  bars.rs  binance.rs  mod.rs  persistence.rs
src/types/: atomic.rs  mod.rs  snapshots.rs  tests.rs
src/utils/: AGENT.md  grpc.rs  mod.rs  process.rs  retry.rs  service_registry.rs  status.rs  tree.rs
tests/: final_system_tests.rs  influxdb_v2_integration_tests.rs  integration.rs  integration_tests.rs  unit.rs  unit_tests.rs
tests/common/: mod.rs
tests/integration/: config_runtime.rs  server.rs
tests/unit/: citadel.rs  citadel_storage.rs  citadel_streaming.rs  client_manager.rs  config.rs  control_manager.rs  data_engine.rs  data_engine_storage.rs  data_engine_streaming.rs  data_handlers.rs  error.rs  exchanges_binance.rs  logging.rs  monitoring_core.rs  stream_router.rs  subscription_manager.rs
(+101 files in other folders)
