[package]
name = "raven"
version = "1.0.0"
edition = "2021"

[lib]
name = "raven"
path = "src/lib.rs"

[[bin]]
name = "raven"
path = "src/bin/raven.rs"

[[bin]]
name = "ravenctl"
path = "src/bin/ravenctl.rs"

[[bin]]
name = "raven_client_bars"
path = "src/bin/raven_client_bars.rs"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
futures-util = "0.3"

# Database
influxdb2 = "0.5"

# Serialization
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

# Concurrent data structures
dashmap = "6.1"

# Error handling
thiserror = "2.0.16"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.15.16"
figment = { version = "0.10", features = ["env", "toml", "json"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }

# WebSocket dependencies
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tungstenite = "0.28"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }

# Monitoring and Metrics
prometheus = "0.14"
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"
hyper = { version = "1.7", features = ["full"] }
http-body-util = "0.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "macros"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.9.2"
serde_json = "1.0"
bincode = "2.0.1"
# Integration testing dependencies
tokio-test = "0.4"
futures-util = "0.3"
tower-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
mockito = "1.4"

[build-dependencies]
tonic-prost-build = "0.14.2"
chrono = { version = "0.4", features = ["serde"] }
protoc-bin-vendored = "3.0"
