[package]
name = "raven"
version = "2.5.6"
edition = "2021"

[lib]
name = "raven"
path = "src/lib.rs"

[[bin]]
name = "binance_spot"
path = "src/bin/raw/binance_spot.rs"

[[bin]]
name = "binance_futures"
path = "src/bin/raw/binance_futures.rs"

[[bin]]
name = "binance_futures_klines"
path = "src/bin/raw/binance_futures_klines.rs"

[[bin]]
name = "tick_persistence"
path = "src/bin/persist/tick_persistence.rs"

[[bin]]
name = "bar_persistence"
path = "src/bin/persist/bar_persistence.rs"

[[bin]]
name = "kline_persistence"
path = "src/bin/persist/kline_persistence.rs"

[[bin]]
name = "raven_timebar"
path = "src/bin/statistics/raven_timebar.rs"

[[bin]]
name = "raven_tibs"
path = "src/bin/statistics/raven_tibs.rs"

[[bin]]
name = "raven_trbs"
path = "src/bin/statistics/raven_trbs.rs"

[[bin]]
name = "raven_vibs"
path = "src/bin/statistics/raven_vibs.rs"

[[bin]]
name = "raven_vpin"
path = "src/bin/statistics/raven_vpin.rs"

[[bin]]
name = "ravenctl"
path = "src/bin/ravenctl/main.rs"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
async-trait = "0.1"
futures-util = "0.3"

# Database
influxdb2 = "0.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

# Concurrent data structures
dashmap = "6.1"

# Error handling
thiserror = "2.0.16"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.15.16"
figment = { version = "0.10", features = ["env", "toml", "json"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }

# WebSocket dependencies
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tungstenite = "0.28"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }

# Monitoring and Metrics
prometheus = "0.14"
hyper = { version = "1.8.1", features = ["full"] }
lazy_static = "1.4"
hyper-util = { version = "0.1.19", features = ["server", "tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.0"
ptree = "0.5.2"
reqwest = { version = "0.13.1", features = ["json", "rustls-native-certs"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
tempfile = "3.8"
rand = "0.9.2"
serde_json = "1.0"
bincode = "1.3.3"
# Integration testing dependencies
tokio-test = "0.4"
futures-util = "0.3"
tower-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
mockito = "1.4"

[build-dependencies]
tonic-prost-build = "0.14.2"
chrono = { version = "0.4", features = ["serde"] }
protoc-bin-vendored = "3.0"
